refactor,feat,fix: handle missing Firebase credentials, clean up code, fix timezone handling, add `type` and `year` properties to TimetableEvent, TODO: clean up code further, add endpoints to filter by year and department instead of just ISO week and study program